# CRESCER_F_server

./: .gitignore  api_tests.py  pyproject.toml  test_medicos.py  test_usuarios.py
alembic/: env.py
alembic/versions/: 0c0aa973f84e_initial_migration.py  3ad1eaad7dcc_initial_migration.py  42038dd1c8c9_remove_preço_padrão2.py  9cf0fa654c2a_remove_preço_padrão.py
app/: auth.py  auth_utils.py  database.py  dependencies.py  main.py
app/config/: settings.py
app/modules/financeiro/: models.py  router.py  schemas.py
app/modules/medicos/: models.py  router.py  schemas.py
app/modules/usuarios/: models.py  router.py  schemas.py
tests/: test_financeiro.py  test_mock_stress.py  test_usuarios.py
